--- a/src/components/Crew/crew.css
+++ b/src/components/Crew/crew.css
@@ -56,7 +56,7 @@
   border-radius: 50%;
 }
 
-@media (hover: hover) {
+@media (hover: hover) and (pointer: fine){
   .crew-nav-item:hover {
     background: #ffffff;
     border: 1px solid #000000;
